Fix findAllUserBookings test